added banner responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <nav>
-            <div class="navbar bg-base-100 lg:w-[1170px] mx-auto py-5 gap-16">
+            <div class="navbar bg-base-100 lg:w-[1170px] mx-auto pb-5 gap-16">
             <div class="navbar-start relative right-7">
               <div class="dropdown left-5">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -44,7 +44,7 @@
                   <li class="text-sm font-medium text-[#444247]"><a>Contact</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-xl gap-0 font-bold">Hockey<span class="text-[#FF4240] ">'</span>s</a>
+              <a class="btn btn-ghost text-4xl gap-0 font-bold">Hockey<span class="text-[#FF4240] ">'</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
@@ -56,8 +56,8 @@
               </ul>
             </div>
             <div class="lg:navbar-end gap-3">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <a class="btn text-white bg-[#FF4240]">Get Ticket</a>
+              <i class="fa-solid fa-magnifying-glass hidden"></i>
+              <a class="btn text-white bg-[#FF4240] text-xl">Get Ticket</a>
             </div>
           </div>
 
@@ -66,38 +66,38 @@
     </header>
     <body>
       <section>
-        <div class="carousel w-[1170px] h-[550px] relative
-        left-[360px]  mx-auto">
-          <div id="slide1" class="carousel-item relative w-[1170px]">
-            <img src="Images/1.png" class="w-[1170px]" />
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide4" class="btn btn-circle">❮</a> 
-              <a href="#slide2" class="btn btn-circle">❯</a>
-            </div>
-          </div> 
-          <div id="slide2" class="carousel-item relative w-[1170px]">
-            <img src="Images/1.png" class="w-[1170px]" />
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <a href="#slide1" class="btn btn-circle">❮</a> 
-              <a href="#slide3" class="btn btn-circle">❯</a>
-            </div>
-          </div> 
-          <div id="slide3" class="carousel-item relative w-[1170px]">
-            <img src="Images/1.png" class="w-[1170px]" />
+        <div class="carousel w-[374px] h-[220px] lg:w-[1170px] lg:h-[550px] lg:relative
+        left-[360px]  lg:mx-auto mx-2">
+        <div id="slide3" class="carousel-item relative lg:w-[1170px]">
+          <img src="Images/1.png" class=" w-[374px] lg:w-[1170px]" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+          <div id="slide3" class="carousel-item relative lg:w-[1170px]">
+            <img src="Images/1.png" class="w-[374px] lg:w-[1170px]" />
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide2" class="btn btn-circle">❮</a> 
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div> 
-          <div id="slide4" class="carousel-item relative w-[1170px]">
-            <img src="Images/1.png" class="w-[1170px]" />
+          <div id="slide3" class="carousel-item relative lg:w-[1170px]">
+            <img src="Images/1.png" class="w-[374px] lg:w-[1170px]" />
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative lg:w-[1170px]">
+            <img src="Images/1.png" class="w-[374px] lg:w-[1170px]" />
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide3" class="btn btn-circle">❮</a> 
               <a href="#slide1" class="btn btn-circle">❯</a>
             </div>
           </div>
         </div>
-        <div class="bg-[#131318] p-8 w-[465px] rounded-2xl flex justify-center mx-auto relative bottom-[180px]">
+        <div class="bg-[#131318] p-8 lg:w-[540px] rounded-2xl flex justify-center lg:mx-auto lg:relative bottom-[180px] left-[253px] m-[10px]">
          <div>
           <h1 class="text-white font-semibold
           text-xl">Meet all the heroes from the field</h1>
@@ -140,6 +140,9 @@
         
 
       </section>
+
+
+      
 
 
     </body>
