added programe section

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
       </section>
         <!-- percentage section -->
       <section>
-        <div class="text-center border-y-2 border-dotted border-gray-400 lg:w-[1170px] mx-auto py-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12">
             <h1 class="text-4xl font-semibold text-black pb-5">Professional Hockeys Club</h1>
             <p class="text-sm font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
 
         </div>
-          <div class="flex text-center border-b-2 border-dotted lg:w-[1170px] mx-auto py-12 flex-col lg:flex-row gap-9 lg:gap-0">
+          <div class="flex text-center border-b-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12 flex-col lg:flex-row gap-9 lg:gap-0">
             <div>
                 <div class="radial-progress rotate-180 text-red-600 " style="--value:87;" role="progressbar"><span class="rotate-180 text-black font-bold">87%</span></div>
                 <h1 class="text-xl font-medium text-black pb-5">Prayer Facility</h1>
@@ -141,7 +141,70 @@
 
       </section>
 
+      <section>
+     <div class="text-center border-b-2 border-dotted border-gray-400 lg:w-[1170px] mx-auto py-12">
+      <h1 class="text-4xl font-semibold text-black pb-5">Program Sections</h1>
+      <p class="text-sm font-medium text-[#A1A1A3]" >Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
 
+     </div>
+     <div class="lg:w-[1170px] w-[374px] flex lg:flex-row flex-col justify-between lg:mx-auto mx-2 mt-9 mb-6 gap-[20px]">
+      <div>
+        <div class="hero w-[374px] lg:w-[573px] h-[338px] rounded-xl" style="background-image: url(Images/2.png);">
+          <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+          <div class="hero-content text-left text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-[28px] font-bold text-white">Junior Program</h1>
+              <p class="mb-5 text-[16px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div>
+        <div class="hero lg:w-[573px] w-[374px] h-[338px]  rounded-xl " style="background-image: url(Images/3.png);">
+          <div class="hero-overlay bg-opacity-60 rounded-xl "></div>
+          <div class="hero-content text-left text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-[28px] font-bold text-white ">Teenager Program</h1>
+              <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+     </div>
+     <div class="lg:w-[1170px] w-[374px] h-[338px] lg:h-[450px] mx-auto mb-6">
+      <div class="hero lg:w-[1170x] lg:h-[450px] h-[338px] rounded-xl" style="background-image: url(Images/4.png);">
+        <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
+        <div class="hero-content text-left text-neutral-content">
+          <div class="max-w-md lg:relative right-[300px] top-[90px]">
+            <h1 class="mb-5 text-[28px] font-bold text-white ">Professional Program</h1>
+            <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
+          </div>
+        </div>
+      </div>
+     </div>
+
+      </section>
+
+
+
+      <section>
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12">
+          <h1 class="text-4xl font-semibold text-black pb-5">Clients Question</h1>
+          <p class="text-sm font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+
+      </div>
+      <div class="border-2 border-solid border-[#A1A1A3] w-[1170px] h-[534px] mx-auto">
+
+      </div>
+      </section>
       
 
 
