added clients question part

--- a/index.html
+++ b/index.html
@@ -196,12 +196,81 @@
 
 
       <section>
-        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3]  lg:w-[1170px] mx-auto py-12">
           <h1 class="text-4xl font-semibold text-black pb-5">Clients Question</h1>
           <p class="text-sm font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
 
       </div>
-      <div class="border-2 border-solid border-[#A1A1A3] w-[1170px] h-[534px] mx-auto">
+      <div class="border-2 border-solid border-[#DEDEDE] rounded-xl lg:w-[1170px] w-[375px] lg:h-[534px]  mx-auto my-6 flex lg:flex-row flex-col justify-between items-center">
+        <div>
+          <img class="px-5" src="Images/11.png" alt="">
+        </div>
+      <div class="lg:w-[700px] w-[335px]">
+        <div class="collapse collapse-arrow bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            Our Equipment
+          </div>
+          <div class="collapse-content"> 
+            <p>Gear up for success with our top-notch hockey club equipment! Our players hit the ice with precision, equipped with high-quality sticks, durable skates, protective helmets, gloves, and shin guards. Our goalies defend with confidence using specialized pads and masks. Our uniform jerseys proudly showcase the team spirit. Elevate your game with gear that blends performance and safety, ensuring a winning season on the ice.</p>
+          </div>
+          <div class="border-b-2 border-[#DEDEDE] lg:w-[645px] w-[335px]  ml-[15px]"></div>
+        </div>
+        <div class="collapse collapse-arrow  bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" /> 
+          <div class="collapse-title text-xl font-medium">
+            Hockey Training
+          </div>
+          <div class="collapse-content"> 
+            <p>Intensive hockey training: precision, strategy, teamwork. Expert coaches elevate skills. Unleash your potential with us on the ice!</p>
+
+          </div>
+          <div class="border-b-2 border-[#DEDEDE] lg:w-[645px] w-[335px] ml-[15px]"></div>
+        </div>
+        <div class="collapse collapse-arrow  bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" /> 
+          <div class="collapse-title text-xl font-medium">
+            Private Lessons
+          </div>
+          <div class="collapse-content"> 
+            <p>Elevate your game with personalized hockey lessons. Tailored coaching, focused guidance, and individualized attention for unmatched skill refinement. Join today!.</p>
+          </div>
+          <div class="border-b-2 border-[#DEDEDE] lg:w-[645px] w-[335px] ml-[15px]"></div>
+        </div>
+        <div class="collapse collapse-arrow bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" /> 
+          <div class="collapse-title text-xl font-medium">
+            Ski Touring
+          </div>
+          <div class="collapse-content"> 
+            <p>Hockey club members conquer snowy peaks in thrilling ski tours. Embrace adventure, camaraderie, and icy slopes with our dynamic team!</p>
+
+          </div>
+          <div class="border-b-2 border-[#DEDEDE] lg:w-[645px] w-[335px] ml-[15px]"></div>
+        </div>
+        <div class="collapse collapse-arrow  bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" /> 
+          <div class="collapse-title text-xl font-medium">
+            Booking
+          </div>
+          <div class="collapse-content"> 
+            <p>Unlock your hockey journey! Seamless booking for elite club membership. Access top-notch coaching, facilities, and exclusive perks. Join now!</p>
+
+          </div>
+          <div class="border-b-2 border-[#DEDEDE] lg:w-[645px] w-[335px] ml-[15px]"></div>
+        </div>
+        <div class="collapse collapse-arrow bg-white rounded-none lg:w-[700px] w-[335px]">
+          <input type="radio" name="my-accordion-2" /> 
+          <div class="collapse-title text-xl font-medium">
+            Pricings
+          </div>
+          <div class="collapse-content"> 
+            <p>Affordable excellence awaits! Explore our hockey club memberships with transparent pricing, top-tier facilities, expert coaching, and exclusive events. Join us today!</p>
+          </div>
+          <div class=" lg:w-[645px] w-[335px]  ml-[15px]"></div>
+        </div>
+    
+      </div>
 
       </div>
       </section>
