added social media

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
          </div>
          <div>
           <h4 class="text-[20px] font-semibold">Message</h4>
-         <textarea style="background-color: rgba(19,19,24,0.03); color: rgba(19, 19, 24, 0.30); border: none;padding: 22px;" class="rounded-xl" placeholder="Write Your Massage" name="Write Your Massage" id="Write Your Massage" cols="90" rows="17"></textarea>
+         <textarea style="background-color: rgba(19,19,24,0.03); color: rgba(19, 19, 24, 0.30); border: none;padding: 22px;" class="rounded-xl" placeholder="Write Your Massage" name="Write Your Massage" id="Write Your Massage" cols="85" rows="17"></textarea>
 
 
          </div>
@@ -471,7 +471,12 @@
 
       </div>
 
-      <div class="w-[1170px] mx-auto">
+      <div style="background-color: rgba(19, 19, 24, 0.03);border-radius: 16px;" class=" mx-auto mt-[25px] mb-[66px] text-center lg:w-[1170px] h-[150px] ">
+        <h1 class="pb-5 pt-[25px] font-bold text-2xl">Social Media</h1>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook-f pl-2"></i>
+        <i class="fa-brands fa-instagram pl-2"></i>
+        <i class="fa-brands fa-github pl-2"></i>
 
       </div>
 
