added some responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <nav>
-            <div class="navbar bg-base-100 lg:w-[1170px] mx-auto pb-5 gap-16">
+            <div class="navbar bg-base-100 lg:w-[1170px] mx-auto pb-5 gap-12">
             <div class="navbar-start relative right-7">
               <div class="dropdown left-5">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -66,31 +66,31 @@
     </header>
     <body>
       <section>
-        <div class="carousel w-[414px] h-[220px] lg:w-[1170px] lg:h-[550px] lg:relative
-        left-[360px]  lg:mx-auto mx-2">
+        <div class="carousel h-[220px] lg:w-[1170px] lg:h-[550px] lg:relative
+        left-[360px]  w-[344px] lg:mx-auto mx-2">
         <div id="slide3" class="carousel-item relative lg:w-[1170px]">
-          <img src="Images/1.png" class=" w-[414px] lg:w-[1170px]" />
+          <img src="Images/1.png" class=" w-[344px] lg:w-[1170px]" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle">❮</a> 
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
           <div id="slide3" class="carousel-item relative lg:w-[1170px]">
-            <img src="Images/1.png" class="w-[414px] lg:w-[1170px]" />
+            <img src="Images/1.png" class="w-[344px] lg:w-[1170px]" />
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide2" class="btn btn-circle">❮</a> 
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide3" class="carousel-item relative lg:w-[1170px]">
-            <img src="Images/1.png" class="w-[414px] lg:w-[1170px]" />
+            <img src="Images/1.png" class="w-[344px] lg:w-[1170px]" />
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide2" class="btn btn-circle">❮</a> 
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide4" class="carousel-item relative lg:w-[1170px]">
-            <img src="Images/1.png" class="w-[414px] lg:w-[1170px]" />
+            <img src="Images/1.png" class="w-[344px] lg:w-[1170px]" />
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide3" class="btn btn-circle">❮</a> 
               <a href="#slide1" class="btn btn-circle">❯</a>
@@ -142,14 +142,14 @@
       </section>
 
       <section>
-     <div class="text-center border-b-2 border-dotted border-gray-400 lg:w-[1170px] mx-auto py-12">
+     <div class="text-center border-b-2 border-dotted border-gray-400 lg:w-[1170px] w-[344px]  mx-auto py-12">
       <h1 class="lg:text-4xl text-2xl font-bold text-black pb-5">Program Sections</h1>
       <p class="lg:text-sm text-[14px] font-medium text-[#A1A1A3]" >Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
 
      </div>
-     <div class="lg:w-[1170px] w-[414px] flex lg:flex-row flex-col justify-between lg:mx-auto mx-2 mt-9 mb-6 gap-[20px]">
+     <div class="lg:w-[1170px] w-[344px] flex lg:flex-row flex-col justify-between lg:mx-auto mx-2 mt-9 mb-6 gap-[20px]">
       <div>
-        <div class="hero w-[414px] lg:w-[573px] h-[338px] rounded-xl" style="background-image: url(Images/2.png);">
+        <div class="hero w-[344px] lg:w-[573px] h-[338px] rounded-xl" style="background-image: url(Images/2.png);">
           <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
           <div class="hero-content text-left text-neutral-content">
             <div class="max-w-md">
@@ -163,7 +163,7 @@
 
       </div>
       <div>
-        <div class="hero lg:w-[573px]  w-[414px]  h-[338px]  rounded-xl " style="background-image: url(Images/3.png);">
+        <div class="hero lg:w-[573px] w-[344px]  h-[338px]  rounded-xl " style="background-image: url(Images/3.png);">
           <div class="hero-overlay bg-opacity-60 rounded-xl "></div>
           <div class="hero-content text-left text-neutral-content">
             <div class="max-w-md">
@@ -177,7 +177,7 @@
 
       </div>
      </div>
-     <div class="lg:w-[1170px]  w-[414px]  h-[338px] lg:h-[450px] mx-auto mb-6">
+     <div class="lg:w-[1170px]  w-[344px] h-[338px] lg:h-[450px] mx-auto mb-6">
       <div class="hero lg:w-[1170x] lg:h-[450px] h-[338px] rounded-xl" style="background-image: url(Images/4.png);">
         <div class="hero-overlay bg-opacity-60 rounded-xl"></div>
         <div class="hero-content text-left text-neutral-content">
@@ -202,7 +202,7 @@
 
       </div>
 
-      <div class="lg:w-[1170px] mx-auto grid lg:grid-cols-2 gap-5 w-[414px] mb-20">
+      <div class="lg:w-[1170px] mx-auto grid lg:grid-cols-2 gap-5 w-[344px] mb-20">
         <div class="card card-side bg-base-100 rounded-xl border-2 border-[#DEDEDE] border-solid">
           <figure><img class="p-4" src="Images/5.png" alt="Movie"/></figure>
           <div class="card-body">
@@ -336,7 +336,7 @@
           <p class="text-sm font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
 
       </div>
-      <div class="border-2 border-solid border-[#DEDEDE] rounded-xl lg:w-[1170px] w-[375px] lg:h-[534px]  mx-auto my-6 flex lg:flex-row flex-col justify-between items-center">
+      <div class="border-2 border-solid border-[#DEDEDE] rounded-xl lg:w-[1170px] w-[344px] lg:h-[534px]  mx-auto my-6 flex lg:flex-row flex-col justify-between items-center">
         <div>
           <img class="px-5 pt-5" src="Images/11.png" alt="">
         </div>
@@ -417,61 +417,61 @@
           <p class="text-sm font-medium text-[#A1A1A3]">"Forge meaningful connections with us. Join our community, engage in discussions, and stay informed. Together, let's build lasting relationships." </p>
 
       </div>
-      <div class="w-[1170px] mx-auto flex justify-between mt-[60px] mb-[40px]">
-        <div class="w-[474px] h-[764px] border-2 border-solid border-[#DEDEDE] rounded-xl ">
-          <div class="w-[374px] h-[216px] mx-auto mt-[35px] p-[30px] rounded-xl" style="background-color:rgba(188, 237, 109, 0.10) ;">
+      <div class="lg:w-[1170px] mx-auto flex lg:flex-row flex-col justify-between  mt-[60px] mb-[40px]">
+        <div class="lg:w-[474px] w-[344px] h-[764px] m-2 border-2 border-solid border-[#DEDEDE] rounded-xl ">
+          <div class="w-[287px] h-[216px] mx-auto mt-[35px] p-[30px] rounded-xl" style="background-color:rgba(188, 237, 109, 0.10) ;">
             <img class="pb-[30px]" src="Images/Group 1171275317.png" alt="">
             <p class="text-sm text-[#A1A1A3] ">Phone Number</p>
             <p class="text-black text-[18px] font-bold">(+62) 123-321-543</p>
           </div>
-          <div class="w-[374px] h-[216px] mx-auto mt-[25px] p-[30px] rounded-xl" style="background-color:rgba(253, 221, 95, 0.10);">
-            <img class="pb-[30px]" src="Images/Group 1171275317.png" alt="">
-            <p class="text-sm text-[#A1A1A3] ">Phone Number</p>
-            <p class="text-black text-[18px] font-bold">(+62) 123-321-543</p>
+          <div class="w-[287px] h-[216px] mx-auto mt-[25px] p-[30px] rounded-xl" style="background-color:rgba(253, 221, 95, 0.10);">
+            <img class="pb-[30px]" src="Images/Group 1171275318.png" alt="">
+            <p class="text-sm text-[#A1A1A3] ">Email</p>
+            <p class="text-black text-[18px] font-bold"> hockeys@support.com</p>
           </div>
-          <div class="w-[374px] h-[216px] mx-auto mt-[25px] p-[30px] rounded-xl" style="background-color:rgba(98, 156, 243, 0.10) ;">
-            <img class="pb-[30px]" src="Images/Group 1171275317.png" alt="">
-            <p class="text-sm text-[#A1A1A3] ">Phone Number</p>
-            <p class="text-black text-[18px] font-bold">(+62) 123-321-543</p>
+          <div class="w-[287px] h-[216px] mx-auto mt-[25px] p-[30px] rounded-xl" style="background-color:rgba(98, 156, 243, 0.10) ;">
+            <img class="pb-[30px]" src="Images/Group 1171275321.png" alt="">
+            <p class="text-sm text-[#A1A1A3] ">Location</p>
+            <p class="text-black text-[18px] font-bold">152/1 Mohakhali Wireless Gate</p>
           </div>
           
 
         </div>
-        <div class="w-[690px] h-[767px] ml-[30px]">
-          <div class="flex justify-between items-center mb-5">
+        <div class="lg:w-[690px] w-[344px] h-[767px] lg:ml-[30px]">
+          <div class="flex lg:flex-row flex-col justify-between items-center lg:mb-5">
             <div>
               <h4 class="text-[20px] font-semibold">Your Name</h4>
-            <input type="text" placeholder="Enter your full name" class="input input-bordered w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
+            <input type="text" placeholder="Enter your full name" class="input input-bordered w-[344px] lg:w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
             </div>
             <div>
               <h4 class="text-[20px] font-semibold">Your Email</h4>
-              <input type="email" placeholder="Enter your Email" class="input input-bordered w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
+              <input type="email" placeholder="Enter your Email" class="input input-bordered w-[344px]  lg:w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
             </div>
           </div>
-         <div class="flex justify-between items-center mb-5" >
+         <div class="flex lg:flex-row flex-col justify-between items-center mb-5" >
           <div>
             <h4 class="text-[20px] font-semibold" >Subject</h4>
-            <input type="text" placeholder="Enter your Subject" class="input input-bordered w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
+            <input type="text" placeholder="Enter your Subject" class="input input-bordered w-[344px] lg:w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
           </div>
           <div>
-            <h4 Message>Phone Number</h4>
-            <input type="number" placeholder="Enter your Number" class="input input-bordered w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
+            <h4 class="text-[20px] font-semibold">Phone Number</h4>
+            <input type="number" placeholder="Enter your Number" class="input input-bordered w-[344px]  lg:w-[324px] max-w-xs " style="background-color: rgba(19, 19, 24, 0.03); color: rgba(19, 19, 24, 0.30);border: none;"/>
           </div>
          </div>
-         <div>
+         <div class="ml-3">
           <h4 class="text-[20px] font-semibold">Message</h4>
-         <textarea style="background-color: rgba(19,19,24,0.03); color: rgba(19, 19, 24, 0.30); border: none;padding: 22px;" class="rounded-xl" placeholder="Write Your Massage" name="Write Your Massage" id="Write Your Massage" cols="85" rows="17"></textarea>
+         <textarea style="background-color: rgba(19,19,24,0.03); color: rgba(19, 19, 24, 0.30); border: none;padding: 22px;" class="rounded-xl w-[320px] h-[200px] lg:w-[676px]  lg:h-[460px]" placeholder="Write Your Massage" name="Write Your Massage" id="Write Your Massage" cols="10" rows="10"></textarea>
 
 
          </div>
-         <button class="btn bg-[#FF4240] text-white border-0 w-[100%] h-[33px] mt-[30px]">Send Message</button>
+         <button class="btn bg-[#FF4240] text-white border-0 lg:w-[100%] w-[335px] ml-[8px] h-[33px] mt-[30px]">Send Message</button>
 
 
         </div>
 
       </div>
 
-      <div style="background-color: rgba(19, 19, 24, 0.03);border-radius: 16px;" class=" mx-auto mt-[25px] mb-[66px] text-center lg:w-[1170px] h-[150px] ">
+      <div style="background-color: rgba(19, 19, 24, 0.03);border-radius: 16px;" class=" mx-auto mt-[25px] mb-[66px] text-center w-[335px] lg:w-[1170px] h-[150px] ">
         <h1 class="pb-5 pt-[25px] font-bold text-2xl">Social Media</h1>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook-f pl-2"></i>
